syntax = "proto2";

// import "D:/library/caffe_env/caffe/include/caffe/proto/caffe.proto";
import "caffe/proto/caffe.proto";

package caffe_ext;

//message BBox{
//  required float x_min = 1;
//  required float y_min = 2;
//  required float x_max = 3;
//  required float y_max = 4;
//}

message ImgBBoxAnnoDatum {
  required caffe.Datum img_datum = 1;
  repeated int32 label = 2;
  //repeated BBox bboxes = 3;
  repeated float x_min = 3;
  repeated float y_min = 4;
  repeated float x_max = 5;
  repeated float y_max = 6;
}

//message ImgBBoxAnnoParameter{
//  required int32 img_width = 1;
//  required int32 img_height = 2;
//  required string heatmap = 3;
//}

message ImgBBoxAnnoParameter {
  required int32 img_height = 1;
  required int32 img_width = 2;
  required int32 max_bbox_per_img = 3;
}

message HeatmapConcatParameter {
  required string heatmap_file = 1;
}

message BBoxToLabelmapParameter {
  required int32 img_height = 1;
  required int32 img_width = 2;
  required int32 h_stride = 3;
  required int32 v_stride = 4;
}

message ExtendedLayerParameter {
  required caffe.LayerParameter layer_param = 1;
  optional ImgBBoxAnnoParameter img_bbox_anno_param = 2;
  optional HeatmapConcatParameter heatmap_concat_param = 3;
  optional BBoxToLabelmapParameter bbox_to_labelmap_param = 4;
}